# VM.AI

./: README.md  config.yaml  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.js
data/: VMAI_DURATION_Data.csv  VMAI_REAL_Data.yaml  VMAI_REGR_Data.csv  VMAI_SPECIFIC_Data.yaml  VMAI_SYNTHETIC_Data.yaml
docs/: Duration.md  Full_Project_Overview.md  Parser.md  Task_Matching_Module_v1.md
docs/backend/: Database_Schema_Documentation.md  Enrichment_module_v1.md  Scheduling_Engine_v1.md  (+3 more)
notebooks/: VM_AI_Duration_notebook.ipynb  VM_AI_Parser_notebook.ipynb  VM_AI_Regressor_notebook.ipynb
scripts/: plot_dataset.py  plot_synthetic.py  report.py
src/backend/: pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 2667094139c9_add_category_id_to_category_statistics.py  50e2839a1663_change_schedule_changes_reference.py  54dc77e1dc35_initial_schema.py  6c9c14b5005e_seting_naive_datetime_formats.py  b1deeeceae45_add_task_drafts_table.py  change_vector_to_array.py  rename_tasks_stats.py
src/backend/app/: main.py
src/backend/app/api/v1/: api.py
src/backend/app/api/v1/endpoints/: duration.py  provisional.py  schedule.py  stats.py  tasks.py
src/backend/app/core/: config.py  database.py  logging_config.py
src/backend/app/schemas/: duration.py  enrichment.py  nlp.py  schedule.py  shared.py  stats.py  task.py  task_matcher.py
src/backend/app/services/: duration.py  enrichment.py  img_to_prompt.py  parser.py  schedule_engine.py  stats_recorder.py  task_matcher.py
src/backend/app/utils/: __init__.py  cleanup.py  model_loader.py  task_normalizer.py  task_saver.py
src/backend/scripts/: download_models.py  reset_db.py  run_backend.bat  seed_data.py  show_all_records.sql  test_update_time_score.py
src/backend/tests/: api_test_examples.txt  test_enrichment.py  test_parser_service.py  test_task_matching.py  test_update_time_score.py
tests/: test_add.py  test_core.py  test_data_no_duplicates.py  test_explicit_fields.py  test_generator.py  test_modify.py  test_schemas.py  test_validate_dataset.py
(+57 files in other folders)
