[project]
name = "vm-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "beautifulsoup4>=4.14.3",
    "click>=8.3.1",
    "datasets>=4.7.0",
    "fiftyone>=1.15.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.6.0",
    "icrawler>=0.6.10",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.5",
    "kagglehub>=1.0.1",
    "markupsafe>=3.0.3",
    "matplotlib>=3.10.8",
    "notebook>=7.5.4",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pydrive2>=1.21.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "scikit-learn==1.6.1",
    "sentence-transformers>=3.0.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "imagehash>=4.3.2",
    "timm>=1.0.27",
    "torchmetrics>=1.9.0",
    "xgboost>=3.2.0",
    "fastapi[standard]>=0.135.3",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
markupsafe = { index = "pypi" }
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[tool.uv.workspace]
members = [
    "src/backend",
]
