[project]
name = "vm-ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.3",
    "parsedatetime>=2.6",
    "psycopg[binary]>=3.3.3",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "python-dateutil>=2.9.0.post0",
    "sentence-transformers>=5.4.0",
    "sqlalchemy>=2.0.49",
    "transformers>=5.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]
